--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,7 +187,7 @@ endmacro()
 
 set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION_MOD})
 set(CPACK_GENERATOR "RPM")
-set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
+set(CPACK_PACKAGE_NAME ${PROJECT_NAME}-PG${PG_VERSION_MAJOR})
 set(CPACK_PACKAGE_RELEASE 1)
 set(CPACK_PACKAGE_CONTACT "Optiver")
 set(CPACK_PACKAGE_VENDOR "Optiver")
